Fixing nav border on small viewport

--- a/src/AnujRNair/AnujNairBundle/Resources/public/css/header-footer.scss
+++ b/src/AnujRNair/AnujNairBundle/Resources/public/css/header-footer.scss
@@ -28,6 +28,10 @@
         &:hover a {
           border-bottom: 2px solid $color-white;
           text-decoration: none;
+
+          @media (max-width: $breakpoint-small) {
+            border-bottom: 2px solid $color-body;
+          }
         }
       }
 
